ipc/ipdl/test/ipdl/ok/race_Stateless.ipdl
protocol race_Stateless {
//    manages Child;

child:
    async Msg1();
    async Msg1_();
parent:
    async Msg2();
    async Msg2_();


    // OK: this is trivial stateless protocol, so race-free "by definition"
start state S5:
    send Msg1 goto S5;
    recv Msg2 goto S5;
};
